<resources>
    <string name="app_name">Kyrzner Manager</string>
    <string name="control_panel">Control Panel</string>
    <string name="usuario">Usuario:</string>
    <string name="title_activity_user1">UserActivity1</string>
    <string name="title_activity_user2">UserActivity1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Administración</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_logs">Historial de logs</string>
    <string name="menu_pgadmin">pgAdmin</string>
    <!--STRINGS DETALLES LOTES-->
    <string name="titlegeneral">Información General</string>
    <string name="txtidproceso">ID Proceso:</string>
    <string name="txtidlote">ID Lote:</string>
    <string name="txtInicio">Hora Inicio:</string>
    <string name="txtFin">Hora Fin:</string>
    <string name="txtProceso">Proceso Actual:</string>
    <string name="txtGavetas"># de gavetas:</string>
    <string name="txtTranscurrido">Tiempo transcurrido:</string>
    <string name="proveedor">Información Proveedor:</string>
    <string name="nameproveedor">Nombre:</string>
    <string name="contactoProveedor">Contacto:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameCompany">Kyrzner S.A</string>
    <string name="procesoe0">Almacenamiento</string>
    <string name="procesoe1">Pelado</string>
    <string name="procesoe2">Deshidratación</string>
    <string name="procesoe3">Separación</string>
    <string name="procesoe4">Corte</string>
    <string name="procesoe5">Empaque</string>
    <string name="retornar">Regresar</string>
    <string name="e0info01">Seleccione el proovedor para el lote actual</string>
    <string name="cancelar">Cancelar</string>
    <string name="infoProovedor">Proovedor:</string>
    <string name="idproovedor">ID proovedor:</string>
    <string name="btnleer_tags">Leer Tags</string>
    <string name="btnguardar">Guardar</string>
    <string name="btnfinalizar">Finalizar</string>
    <string name="errorFinalizar">Se ha perdido la conexión y no se ha podido mostrar la información.</string>
    <string name="noGavetas">No. Gavetas:</string>
    <string name="seleccionLote">Escoja un código de Lote:</string>
    <string name="infoNext">Siguiente</string>
    <string name="infoDetalles">Detalles:</string>
    <string name="infoIngreso">Fecha Ingreso:</string>
    <string name="infoError">Error</string>
    <string name="errorNoWorkers">No hay trabajadores disponibles para elaborar un nuevo grupo para este lote.</string>
    <string name="errorRepetidoWorker">Usted ya cuenta con un grupo de trabajo para el presente lote.</string>
    <string name="infoGroup">Seleccione a sus compañeros de trabajo:</string>
    <string name="infoGrupoTrabajo">Grupo De Trabajo:</string>
    <string name="infoTags">Tags:</string>
    <string name="btnGuardar">Guardar</string>
    <string name="infoFecha">Ingreso</string>
    <string name="infoDetallesDash">Ver más detalles </string>
    <string name="infoGavetas">Gavetas</string>
    <string name="infoProovedorDash">Proovedor</string>
    <string name="infoPesoDash">Peso Aprox.</string>
    <string name="txtCargando">Cargando...</string>
    <string name="txtNohayInfo">N/A</string>
    <string name="txtGruposDash01">Grupos de Trabajo</string>
    <string name="dashInfoDetalleFinal">No hay más información disponible para este lote</string>
    <string name="InfocantidadGavetas">No hay gavetas encontradas</string>
    <string name="dtEncargado">Encargado</string>
    <string name="dtingreso">Ingreso</string>
    <string name="ftitleDetAlmacenamiento">Detalles Almacenamiento</string>
    <string name="dtGeneral">General</string>

</resources>
