<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/lov_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/lov_logs"
            android:title="@string/menu_logs" />


    </group>
    <item android:title="Configuración">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_pgadmin"
                android:icon="@drawable/lov_nube"
                android:title="@string/menu_pgadmin" />
        </menu>
    </item>

    <!--item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item-->

</menu>
