<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.kyrznermanager.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_dashboard_self"
            app:destination="@id/nav_dashboard"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_out"
            app:popExitAnim="@anim/slide_out_left"
            app:popUpTo="@+id/nav_dashboard"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_dashboard_to_nav_lote_detalles"
            app:destination="@id/nav_lote_detalles"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_logs"
        android:name="com.example.kyrznermanager.ui.gallery.GalleryFragment"
        android:label="@string/menu_logs"
        tools:layout="@layout/fragment_gallery" />


    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.kyrznermanager.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
    <fragment
        android:id="@+id/nav_lote_detalles"
        android:name="com.example.kyrznermanager.ui.home.FragmentLoteDetalle"
        android:label="Detalles de Lote"
        tools:layout="@layout/fragment_lote_detalle" >
        <action
            android:id="@+id/action_nav_lote_detalles_self"
            app:destination="@id/nav_lote_detalles"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/nav_lote_detalles"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_nav_lote_detalles_to_detalleAlmacenamiento"
            app:destination="@id/detalleAlmacenamiento"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detalleAlmacenamiento"
        android:name="com.example.kyrznermanager.ui.home.DetalleAlmacenamiento"
        android:label="@string/ftitleDetAlmacenamiento"
        tools:layout="@layout/fragment_detalle_almacenamiento" />

    <!--fragment
        android:id="@+id/nav_share"
        android:name="com.example.kyrznermanager.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.kyrznermanager.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" /-->
</navigation>